# prometheus-electron

./: .gitignore  LICENSE  README.md  package.json  resetConfig.sh  update-rust.sh  webpack.config.js  webpack.main.config.js  webpack.renderer.config.js
resources/icons/: README.md
src/main/: index.js  preload.js
upstream/prometheus-neon/: package.json
upstream/prometheus-neon/native/: Cargo.toml  artifacts.json
upstream/prometheus-neon/native/src/: lib.rs
